Enhance blog metadata and UI components
- Updated blog index page to adjust the title size and apply uppercase styling.
- Added subtitle, image URL, image alt text, and tags to the 'Getting Started' and 'Welcome' blog posts for improved SEO and user engagement.
- Introduced utility functions for managing blog metadata and tag colors, enhancing the overall blog functionality.

--- a/content/blog/getting-started.mdx
+++ b/content/blog/getting-started.mdx
@@ -1,7 +1,13 @@
 ---
 title: "Getting Started with Solana Development"
+subtitle: "Set up your Solana development environment quickly"
 date: "2025-06-02"
 description: "A beginner's guide to setting up your Solana development environment"
+imageUrl: "/getting-started.png"
+imageAlt: "Abstract blue geometric pattern"
+tags:
+  - BEGINNER
+  - SOLANA
 ---
 
 # Getting Started with Solana
