--- a/content/blog/welcome.mdx
+++ b/content/blog/welcome.mdx
@@ -1,7 +1,13 @@
 ---
 title: "Welcome to Kronos Guild Blog"
+subtitle: "Introducing the Kronos Guild learning platform"
 date: "2025-06-03"
 description: "Our first blog post introducing the Kronos Guild learning platform"
+imageUrl: "/welcome.png"
+imageAlt: "Abstract orange geometric pattern"
+tags:
+  - GENERAL
+  - SOLANA
 ---
 
 # Welcome to Kronos Guild
