added mdx formatting

--- a/content/blog/introduction-to-rust.mdx
+++ b/content/blog/introduction-to-rust.mdx
@@ -313,14 +313,14 @@ fn main() {
 
 ## Macros vs Functions: When to Use Which
 
-| **Macros**                              | **Functions**                   |
-| --------------------------------------- | ------------------------------- |
-| Generate code at compile time           | Execute at runtime              |
-| Can take different types of input       | Fixed parameter types           |
-| No runtime overhead                     | Standard function call overhead |
-| Can violate some syntax rules           | Must follow all syntax rules    |
-| Harder to debug                         | Easier to debug                 |
-| Can accept variable number of arguments | Fixed number of parameters      |
+| Macros | Functions |
+| --- | --- |
+| Generate code at compile time | Execute at runtime |
+| Can take different types of input | Fixed parameter types |
+| No runtime overhead | Standard function call overhead |
+| Can violate some syntax rules | Must follow all syntax rules |
+| Harder to debug | Easier to debug |
+| Can accept variable number of arguments | Fixed number of parameters |
 
 Use macros when you need:
 
